# Chat

./: CMakeLists.txt  Chat.cpp  Chat.h  Messaggio.cpp  Messaggio.h  NotificaMessaggio.cpp  NotificaMessaggio.h  NuovoMessaggio.cpp  NuovoMessaggio.h  Observer.h  Subject.h  TestNotifica.cpp  TestNotifica.h  Utente.cpp  Utente.h  main.cpp
Test/: CMakeLists.txt  MessaggioFixture.cpp  MessaggioTest.cpp  NotificaMessaggio.cpp  Utente&ChatFixture.cpp  runAllTests.cpp
